# storm-signal

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  schema.sql  wrangler.jsonc
.github/workflows/: ingest.yml  mcp-public-acceptance.yml  validate.yml
LandingLight/: .env.example  eslint.config.mjs  package-lock.json  package.json
LandingLight/app/: DemoStory.tsx  LegalPage.tsx  MotionController.tsx  SiteFooter.tsx  band.css  editorial.css  footer.css  globals.css  layout.tsx  legal.css  mobile.css  motion.css  page.tsx  polish.css  (+2 more)
cloudflare/: storm-signal-mcp-gateway.js
docs/: auth-trial-authorization-contract-v1.md  controlled-demo-coverage-contract.md  conversational-context-management-contract-v1.md  conversational-operating-model.md  deterministic-conversational-execution-contract-v1.md  field-plan-and-brief-contract.md  geography-and-coverage-closure.md  geography-five-state-focus-dry-run.md  geospatial-data-contract.md  geospatial-enrichment-plan.md  ingestion-scheduler-closure.md  market-ranking-contract.md  multihazard-location-score-contract.md  nhc-data-contract.md  product-commercial-roadmap.md  product-delivery-shell-contract.md  release-and-rollback-runbook-v1.md  shell-delivery-acceptance-matrix.md  trial-five-hour-usage-window-contract-v1.md  trial-usage-window-baseline-qa.md
scripts/: import_census_geographies.py  import_nhc_archived_advisory.py  test_controlled_demo_mcp.py  test_mcp_public_smoke.py
supabase/: config.toml
tests/: test_geographic_import.py  test_mcp.py  test_nhc_import.py  test_sources.py  test_supabase.py
(+139 files in other folders)
