[project]
name = "storm-signal-recon"
version = "0.1.0"
description = "Data reconnaissance prototype for NOAA/NWS severe-weather sources"
requires-python = ">=3.11"

[project.scripts]
storm-recon = "storm_signal_recon.cli:main"
storm-ingest = "storm_signal_recon.ingest:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
